Fixing the alignments

--- a/Art/CrazyBalls/style.css
+++ b/Art/CrazyBalls/style.css
@@ -1,7 +1,17 @@
-body {
-   margin: 135px 0 0 430px;
-   background-color: white;
-   background-size: 400% 400%;
+html, body {
+    height: 100%;
+    max-width: max-content;
+	margin: auto;
+}
+.main {
+    height: 100%;
+    width: 100%;
+    display: table;
+}
+.wrapper {
+    display: table-cell;
+    height: 100%;
+    vertical-align: middle;
 }
 .parent{
 	height: 140px;
